# doubleml-for-py

./: .coverage  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  OPTUNA_MIGRATION_GUIDE.md  OPTUNA_REWORK_SUMMARY.md  README.md  README.txt  bayesian_doubleml.qmd  check_params_structure.py  fix_optuna_settings.py  maketables_demo.ipynb  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirments-dev.txt  requirments.txt  setup.py  sim_split_strategies_A.ipynb  sim_split_strategies_A_linear.ipynb  sim_split_strategies_B.ipynb  sim_split_strategies_B_linear.ipynb  sim_split_strategies_C linear.ipynb  sim_split_strategies_C.ipynb  synthetic_example.py  test_new_optuna.py
.claude/: CLAUDE.md  STATUS.md
.claude/agents/: py-general-reviewer.md  py-reviewer.md
.claude/plans/: tooling-modernization.md
.claude/rules/: dml-scalar-test-structure.md  error-handling.md  performance-guidelines.md  py-code-conventions.md  testing-conventions.md
.claude/skills/code-simplifier/: SKILL.md
.claude/skills/techdebt/: SKILL.md
.conda/DLLs/: _ctypes.pyd.c~.conda_trash.conda_trash
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: api_docu.yml  bug_report.yml  config.yml  feature_request.yml
.github/copilot/: README.md  code-style.md  error-handling.md  performance.md  scalar-tests.md  testing.md
.github/workflows/: codeql.yml  deploy_docu.yml  deploy_pkg.yml  pytest.yml
.serena/: project.yml
dml/: README.md  setup.py
dml/dml/: __init__.py  dml_plr.py  double_ml.py  double_ml_data.py  double_ml_iivm.py  double_ml_im.py  double_ml_irm.py  double_ml_pl.py  double_ml_pliv.py  double_ml_plr.py  double_ml_resampling.py  helper.py
dml/dml/tests/: conftest.py  helper_general.py  helper_iivm_manual.py  helper_irm_manual.py  helper_pliv_manual.py  helper_plr_manual.py  helper_pyvsr.py  test_dml_data.py  test_iivm.py  test_iivm_pyvsr.py  test_irm.py  test_irm_pyvsr.py  test_pliv.py  test_pliv_pyvsr.py  test_plr.py  (+6 more)
dml/doc/: conf.py  index.rst
doc/: conf.py  index.rst
doc/_templates/: class.rst
doc/api/: api.rst  double_ml_datasets.rst  double_ml_iivm.rst  double_ml_irm.rst  double_ml_pliv.rst
doc/auto_examples/: index.rst
doc/diagrams/: architecture.md  testing_structure.md
doc/guide/: algorithms.rst  basics.rst  data_backend.rst  guide.rst  learners.rst  models.rst  mult_treat.rst  resampling.rst  scores.rst  se_confint.rst  tuning.rst
doc/intro/: install.rst  intro.rst
doc/release/: release.rst
doc/sphinxext/: github_link.py
doubleml/: LICENSE  __init__.py  _double_ml_score_mixins.py  _helper.py  _utils.py  _utils_base.py  _utils_checks.py  _utils_copula.py  _utils_plots.py  _utils_resampling.py  datasets.py  double_ml.py  double_ml_base.py  double_ml_base_linear.py  double_ml_basic.py  double_ml_basic_linear.py  double_ml_blp.py  double_ml_concat.py  double_ml_copula.py  double_ml_cvar.py  double_ml_data.py  double_ml_did.py  double_ml_did_cs.py  double_ml_did_pa.py  double_ml_ensemble.py  double_ml_framework.py  double_ml_iivm.py  double_ml_irm.py  double_ml_linear_score.py  double_ml_lpq.py  double_ml_model_template.py  double_ml_nuisance.py  double_ml_pcorr.py  double_ml_pliv.py  double_ml_pliv_select_z.py  double_ml_plr.py  double_ml_policytree.py  double_ml_pq.py  double_ml_qte.py  double_ml_resampling.py  (+8 more)
doubleml/data/: __init__.py  base_data.py  base_data_content.txt  cluster_data.py  did_data.py  panel_data.py  rdd_data.py  ssm_data.py
doubleml/datasets/: __init__.py  fetch_401K.py  fetch_bonus.py
doubleml/did/: __init__.py  did.py  did_aggregation.py  did_binary.py  did_cs.py  did_cs_binary.py  did_multi.py
doubleml/did_model/: __init__.py
doubleml/dml/: double_ml.py  helper.py
doubleml/doc/: conf.py  index.rst
doubleml/doubleml/: __init__.py  api.py  datasets.py  double_ml.py  double_ml_data.py  double_ml_iivm.py  double_ml_irm.py  double_ml_pliv.py  double_ml_plr.py  double_ml_resampling.py  helper.py
doubleml/examples/: double_ml_multiway_cluster.py  plot_double_ml_multiway_cluster.py
doubleml/irm/: __init__.py  apo.py  apos.py  cvar.py  iivm.py  irm.py  irm_scalar.py  lpq.py  pq.py  qte.py  ssm.py
doubleml/iv/: __init__.py
doubleml/iv_model/: __init__.py  iivm.py  test_pliv_partial_x_tune.py
doubleml/logistic/: logistic.py
doubleml/plm/: __init__.py  logistic.py  lplr.py  pliv.py  plpr.py  plr.py  plr_scalar.py  plr_vector.py
doubleml/plr/: __init__.py  plr.py
doubleml/rdd/: __init__.py  _utils.py  datasets.py  rdd.py
doubleml/tests/: _utils.py  _utils_blp_manual.py  _utils_boot.py  _utils_cluster.py  _utils_cvar_manual.py  _utils_did_cs_manual.py  _utils_did_manual.py  _utils_did_rcs_manual.py  _utils_dml_cv_predict.py  _utils_doubleml_sensitivity_manual.py  _utils_doubleml_sensitivtiy_manual.py  _utils_iivm_manual.py  _utils_irm_manual.py  _utils_lpq_manual.py  _utils_pliv_manual.py  _utils_pliv_partial_x_manual.py  _utils_pliv_partial_xz_manual.py  _utils_pliv_partial_z_manual.py  _utils_plr_manual.py  _utils_pq_manual.py  _utils_pt_manual.py  _utils_qte_manual.py  _utils_selection_manual.py  _utils_tune_optuna.py  conftest.py  helper_boot.py  helper_dml_cv_predict.py  helper_general.py  helper_iivm_manual.py  helper_irm_manual.py  helper_pliv_manual.py  helper_pliv_partial_x_manual.py  helper_pliv_partial_xz_manual.py  helper_pliv_partial_z_manual.py  helper_plr_manual.py  helper_pyvsr.py  intro.py  test.ipynb  test_apo_tune_ml_models.py  test_base_linear.py  (+137 more)
doubleml/utils/: __init__.py  _aliases.py  _check_defaults.py  _check_return_types.py  _checks.py  _descriptive.py  _did_utils.py  _estimation.py  _learner.py  _plots.py  _propensity_score.py  _sensitivity.py  _tune_optuna.py  blp.py  dummy_learners.py  gain_statistics.py  global_learner.py  maketables_mixin.py  plots.py  policytree.py  propensity_score_processing.py  resampling.py
examples/: double_ml_bonus_data.py  double_ml_multiway_cluster.py  optuna_tuning_comparison.ipynb  optuna_tuning_example.py  optuna_tuning_new_api_example.py
(+348 files in other folders)
