[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DoubleML"
version = "0.10.dev0"
description = "Double Machine Learning in Python"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Bach, P., Chernozhukov, V., Klaassen, S., Kurz, M. S., and Spindler, M."}
]
maintainers = [
    {name = "Sven Klaassen", email = "sven.klaassen@uni-hamburg.de"}
]
requires-python = ">=3.9"
dependencies = [
    "joblib",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn>=1.4.0",
    "statsmodels",
    "matplotlib",
    "seaborn>=0.13",
    "plotly"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
rdd = [
    "rdrobust>=1.3.0"
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "xgboost",
    "lightgbm",
    "black>=25.1.0",
    "ruff>=0.11.1",
    "pre-commit>=4.2.0",
]

[tool.black]
line-length = 127
target-version = ['py39', 'py310', 'py311', 'py312']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | build
  | dist
  | doc/_build
)/
'''

[tool.ruff]
# max line length for black
line-length = 127
target-version = "py39"


[tool.ruff.lint]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I"]
ignore = [
    # Use `is` and `is not` for type comparisons, or `isinstance()` for
    # isinstance checks
    "E721",
]

[project.urls]
Documentation = "https://docs.doubleml.org"
Source = "https://github.com/DoubleML/doubleml-for-py"
"Bug Tracker" = "https://github.com/DoubleML/doubleml-for-py/issues"
