[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DoubleML"
version = "0.11.dev0"
description = "Double Machine Learning in Python"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Bach, P., Chernozhukov, V., Klaassen, S., Kurz, M. S., and Spindler, M."}
]
maintainers = [
    {name = "Sven Klaassen", email = "sven.klaassen@uni-hamburg.de"}
]
requires-python = ">=3.9"
dependencies = [
    "joblib",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn>=1.4.0",
    "statsmodels",
    "matplotlib",
    "seaborn>=0.13",
    "plotly"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
rdd = [
    "rdrobust>=1.3.0"
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "xgboost",
    "lightgbm",
    "black>=25.1.0",
    "ruff>=0.11.1",
    "pre-commit>=4.2.0",
    "mypy>=1.18.0",
]

[project.urls]
Documentation = "https://docs.doubleml.org"
Source = "https://github.com/DoubleML/doubleml-for-py"
"Bug Tracker" = "https://github.com/DoubleML/doubleml-for-py/issues"

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-ignore-import-errors"
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS"
]

[tool.black]
line-length = 127
target-version = ['py39', 'py310', 'py311', 'py312']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | build
  | dist
  | doc/_build
)/
'''

[tool.ruff]
# max line length for black
line-length = 127
target-version = "py39"


[tool.ruff.lint]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I"]
ignore = [
    # Use `is` and `is not` for type comparisons, or `isinstance()` for
    # isinstance checks
    "E721",
]

# MyPy configuration
[tool.mypy]
python_version = "3.12"
mypy_path = "."
packages = ["doubleml"]
exclude = [
    "^tests/|^test_",
]

# Essential checks only:
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

# Output formatting:
show_error_codes = true
pretty = true
color_output = true

# Handle third-party libraries:
ignore_missing_imports = true
