[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DoubleML"
version = "0.12.dev0"
description = "Double Machine Learning in Python"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Bach, P., Chernozhukov, V., Klaassen, S., Kurz, M. S., and Spindler, M."}
]
maintainers = [
    {name = "Sven Klaassen", email = "sven.klaassen@uni-hamburg.de"}
]
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.2.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.6.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13",
    "plotly>=5.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
rdd = [
    "rdrobust>=1.3.0"
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "black>=25.1.0",
    "ruff>=0.11.1",
    "pre-commit>=4.2.0",
]

[project.urls]
Documentation = "https://docs.doubleml.org"
Source = "https://github.com/DoubleML/doubleml-for-py"
"Bug Tracker" = "https://github.com/DoubleML/doubleml-for-py/issues"

[tool.pytest.ini_options]
markers = [
    "ci: mark a test as a continuous integration test which will be executed in github actions.",
    "ci_rdd: mark a test as a continuous integration test which will be executed in github actions and is included in the rdd submodule."
]
filterwarnings = [
    "ignore:.*A sharp RD design is being estimated, but the data indicate that the design is fuzzy.*:UserWarning",
    "ignore:.*A learner ml_m has been provided for for a sharp design but will be ignored. A learner ml_m is not required for estimation.*:UserWarning",
    "ignore:.*A learner ml_m has been provided for score = \"experimental\" but will be ignored.*:UserWarning",
    "ignore:.*A learner ml_g has been provided for score = \"partialling out\" but will be ignored.*:UserWarning",
    "ignore:.*Propensity predictions from learner RandomForestClassifier\\(n_estimators=10\\) for ml_m are close to zero or one \\(eps=1e-12\\).*:UserWarning",
    "ignore:.*Returning pointwise confidence intervals for basis coefficients.*:UserWarning",
    "ignore:.*Propensity score is close to 0 or 1. Trimming is at 0.01 and 0.99 is applied.*:UserWarning",
    "ignore:.*Sensitivity analysis not implemented for callable scores.*:UserWarning",
    "ignore:.*Subsample has not common support. Results are based on adjusted propensities.*:UserWarning",
    "ignore:.*Treatment probability within bandwidth left from cutoff higher than right from cutoff.\\nTreatment assignment might be based on the wrong side of the cutoff.*:UserWarning",
    "ignore:.*The estimated nu2 for d is not positive.*:UserWarning"
]
addopts = [
    "--doctest-modules",
    "--doctest-ignore-import-errors"
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS"
]

[tool.black]
line-length = 127
target-version = ['py310', 'py311', 'py312', 'py313']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | build
  | dist
  | doc/_build
)/
'''

[tool.ruff]
# max line length for black
line-length = 127
target-version = "py312"


[tool.ruff.lint]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I"]
ignore = [
    # Use `is` and `is not` for type comparisons, or `isinstance()` for
    # isinstance checks
    "E721",
]
